<resources>
    <string name="app_name">Forum</string>
    <string name="username_field">Username</string>
    <string name="email_field">Email</string>
    <string name="passwordField">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="my_account">My account</string>
    <string name="recent_posts">Recent posts</string>
    <string name="search">Search</string>
    <string name="sport">Sport</string>
    <string name="sexuality">Sexuality</string>
    <string name="it">IT</string>
    <string name="health">Health</string>
    <string name="game">Game</string>
    <string name="automobile">Automobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="actuality">Actuality</string>
    <string name="nbr_messages">Number of messages</string>
    <string name="change_password">Change password</string>
    <string name="security">Security</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="about_the_app">About the app</string>
</resources>
